--- a/index.html
+++ b/index.html
@@ -27,16 +27,12 @@
     <main class="main-wrapper main-grid">
       <section class="button-section inner-grid">
         <h2 class="section-title">BUTTONS</h2>
-        <div class="button-section-default">
           <h3 class="summary-label regular-grey-color">Default</h3>
-          <button>Primary Button</button>
-          <button>Primary Button</button>
-        </div>
-        <div class="button-section-hover">
+          <button class="btn primary-btn dark-blue-color">Primary Button</button>
+          <button class="btn primary-btn dark-blue-color">Primary Button</button>
           <h3 class="summary-label regular-grey-color">Hovered</h3>
-          <button>Secondary Button</button>
-          <button>Secondary Button</button>
-        </div>
+          <button class="btn secondary-btn">Secondary Button</button>
+          <button class="btn secondary-btn">Secondary Button</button>
       </section>
 
       <section class="colors-section inner-grid">
@@ -74,7 +70,7 @@
       </section>
 
       <section class="fonts-section inner-grid">
-        <h2 class="section-title">FONTS</h2>
+        <h2 class="section-title">FONTS - Monsterrat</h2>
         <h1 class="dark-blue-color">Page Title | 28px Bold #1E1A50</h1>
         <h2 class="dark-blue-color">Secondary Title | 16px Bold #1E1A50</h2>
         <h3 class="darker-blue-color">Tertiary Title | 14px Bold #1A2950</h3>
