--- a/index.html
+++ b/index.html
@@ -28,22 +28,29 @@
       <section class="button-section inner-grid">
         <h2 class="section-title">BUTTONS</h2>
           <h3 class="summary-label regular-grey-color">Default</h3>
-          <button class="btn primary-btn dark-blue-color">Primary Button</button>
-          <button class="btn primary-btn dark-blue-color">Primary Button</button>
+          <button class="btn btn-primary dark-blue-color">Primary Button</button>
+          <button class="btn btn-primary dark-blue-color">Primary Button</button>
           <h3 class="summary-label regular-grey-color">Hovered</h3>
-          <button class="btn secondary-btn">Secondary Button</button>
-          <button class="btn secondary-btn">Secondary Button</button>
+          <button class="btn btn-secondary">Secondary Button</button>
+          <button class="btn btn-secondary">Secondary Button</button>
       </section>
 
       <section class="colors-section inner-grid">
         <h2 class="section-title">COLORS</h2>
         <ul class="hex-color-list">
-          <li>#242E4c</li>
-          <li>#738BFD</li>
-          <li>#F55623</li>
-          <li>#767E96</li>
-          <li>#E9EAED</li>
-          <li>#F3F4F6</li>
+          <li class="bg-dark-blue-color box-color">#242E4c</li>
+          <li class="bg-light-blue-color box-color">#738BFD</li>
+          <li class="bg-dark-orange-color box-color">#F55623</li>
+          <li class="bg-regular-grey-color box-color">#767E96</li>
+          <li>
+            <div class="bg-secondary-color box-color">
+              #E9EAED
+            </div>
+            <div class="summary-label regular-grey-color info-box-color">Only secondary button background color</div>
+          </li>
+          <li class="bg-light-secondary-color box-color">
+            #F3F4F6
+          </li>
         </ul>
       </section>
 
